# mandelbrot-gen

./: .gitignore  CMakeLists.txt  README.md
Mandelbrot set plotter/: main.cpp
Mandelbrot set plotter.xcodeproj/: project.pbxproj
Mandelbrot set plotter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Mandelbrot set plotter.xcodeproj/xcuserdata/thomas.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: ArgUtils.h  ImgUtils.h
mandelbrot-gen.xcodeproj/: project.pbxproj
mandelbrot-gen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mandelbrot-gen.xcodeproj/xcshareddata/xcschemes/: Release.xcscheme
src/: ArgUtils.cpp  ImgUtils.cpp  Main.cpp
